non-msrv-tests/tests/ui/union.stderr
error: traits other then `Clone` and `Copy` aren't supported by unions
 --> tests/ui/union.rs:5:1
  |
5 | / #[derive_where(Debug)]
6 | | union Test<T> {
7 | |     field: PhantomData<T>,
8 | | }
  | |_^
